apps/base/organisers/homer/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homer-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homer.${CLUSTER_DOMAIN}`)
      services:
        - name: homer
          port: 8080
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
